--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,7 +14,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-between" role="navigation">
             <div class="container">
                 <a class="navbar-brand" href="{{ path('index') }}">
-                    Newsifieeer
+                    <i class="fa fa-newspaper"></i> Newsifieeer
                 </a>
 
                 <ul class="nav navbar-nav navbar-right">
